[package]
name = "slatchhammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.16.1"
bevy_rapier3d = "0.30.0"
bevy_vector_shapes = "0.10.0"

[profile.release]
opt-level = 'z'     # Optimize for size
